<resources>
    <string name="app_name">fem_cesargayo_bitacora</string>
    <string name="signed_in">Signed in!</string>
    <string name="signed_cancelled">Signed in cancelled</string>
    <string name="logout_button">Logout</string>
    <string name="firebase_user_fmt">Firebase User: %s</string>
    <string name="desc_firebase_lockup">Firebase logo and name</string>
    <string name="desc_emailpassword">Use an email and password to authenticate with Firebase.</string>
    <string name="account_linking">Account Linking</string>
    <string name="hint_user_id">User ID</string>
    <string name="detail_delivery_text">Detail of delivery</string>
    <string name="label_title">BestSeller book Logbook API</string>
    <string name="label_show_events">Show delivery events</string>
    <string name="label_note_event">Register an event</string>
    <string name="notesEntryText">Event notes</string>
    <string name="register_event">Register an event</string>
    <string name="new_location">New location</string>
    <string name="dialog_text_reg_event_title">Register Event</string>
    <string name="dialog_text_reg_event_question">Do you wish to register the new event?</string>
    <string name="dialog_text_reg_event_positive">Yes</string>
    <string name="dialog_text_reg_event_negative">No</string>
    <string name="label_update_location">Update location</string>
    <string name="create_account">Create Account</string>
    <string name="send_link">Send Link</string>
    <string name="sign_out">Sign Out</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>

    <string name="passwordless_status_fmt">Email User: %1$s (verified: %2$b)</string>
    <string name="passwordless_title_text">Passwordless Sign In</string>
    <string name="status_email_not_sent">Send link to your email to get started.</string>
    <string name="status_email_sent">Link sent, check your email to continue.</string>
    <string name="status_link_found">Link received, enter email to sign in.</string>
    <string name="status_logged">Logueado!</string>
    <string name="notes_text_view">Notes to add: </string>
    <string name="event_create_button">event_create_button</string>
    <string name="labelExit">Bye bye, my friend!</string>
    <string name="set_event">Set Event</string>
    <string name="set_location">Set location</string>
    <string name="labelAbout">About</string>
    <string name="about">Second Android programming assignment for the FEM module of the MiW masters degree of UPM - ETSISI</string>
    <string name="btnGetApiContent">Get list of books (API)</string>
    <string name="delivery_date_label_text_view">Date of delivery</string>
</resources>
